tests/valid/declaracaoNumber.ts
let b: number = 42;
