tests/invalid/teste_lex.ts
let A: number = 10 @ 5;